tests/failing/bad-return-value-2.c
void f1() {
    return 1; // should not provide value
}